objects/Test_Deploy__c.object
<CustomObject   >
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>test1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>test2</label>
        <type>AutoNumber</type>
    </fields>
    <label>Test Deploy</label>
    <nameField>
        <label>Test Deploy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDeploys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>